# cala

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.release  Makefile  README.md  api-reference.html  deny.toml  docker-compose.docker.yml  docker-compose.override.yml  docker-compose.yml  flake.nix  index.html  notes  opensearch.xml  result  rust-toolchain.toml  sitemap.xml  typos.toml
bats/: cala.yml  (+12 more)
cala-cel-interpreter/: Cargo.toml
cala-cel-interpreter/src/: builtins.rs  cel_type.rs  context.rs  error.rs  interpreter.rs  lib.rs  value.rs
cala-cel-parser/: Cargo.toml  build.rs
cala-cel-parser/src/: ast.rs  cel.lalrpop  cel.rs  lib.rs  parser.rs
cala-ledger/: .env  20250904065521_job_setup.sql  Cargo.toml  build.rs
cala-ledger-account-set/: Cargo.toml
cala-ledger-account-set/.sqlx/: query-0046003258dead0623870f8e45f0168052a44bbdc0d64e22aec833ad47c541bd.json  query-15355146d010ea9146ab3a6a3c1736145af3a56495be97fd18eeaca61821aded.json  query-2c96cf67632c2efff9189aa9ace88d4fedb985ff2dcd0204e5b2ed51502ee159.json  query-2cd388a1d0e0ac2b84fc1c86a8a64f0d2f7e3d5a0ebd3a87285313f9f237dc36.json  query-37d1c3d6a1c9ffd957bbe666e3a966cb20a9ce977d940aebe7da72cb583f3760.json  query-3dc358051143fc68cc4925824ea42d8e6705e2c92f2d0cb8640319f41f151ca6.json  query-6a6577f96ae0f098a4539fc36d267fcf8fa836ce7c6f54c42116256b6fc22735.json  query-77ff1ea424cf7e2b59bd8d3d52676017804003520e5f61c279bb064c7b653794.json  query-a433795ea72ffcb2bc30daeb18edc1e2e31923ae34b6816bf689f43236827820.json  query-ae66013aed4f0b9efcebc8515b5eb107d8bac3b6996a6e5e51680dc795f7367f.json  query-d03133c993f395f648a95b81e4c1f95a69a43daca7579db849d79df6e9e44291.json  query-e3f7aa3c29a6c753ebb50f338a5c01fa37052f82087e0dac489e241f268b324b.json
cala-ledger-account-set/src/: cursor.rs  entity.rs  error.rs  lib.rs  repo.rs
cala-ledger-balance/: Cargo.toml
cala-ledger-balance/.sqlx/: query-0972afc446cb473ef4e90f4324787da37e85ccb1ffdf3234ca3b63f72794f579.json  query-157b3c169b10f77ff24ca11ce7f55985652f3d4611c113b63a479dcc71ed4d06.json  query-79da0107ff9bbca7c80ca3bcbb803298a10133956609704da9f2523b3ae42abe.json  query-8b0c1ebe176c57c8c2de9cc7b4c62a40506de1a8cd813d649ded61484457ad8e.json  query-9224c1c459a94c2de75e113a109ea8077430c79520ca26b44f1a7ae74656ad7c.json
cala-ledger-balance/src/: account_balance.rs  error.rs  lib.rs  repo.rs  snapshot.rs
cala-ledger-core-types/: Cargo.toml
cala-ledger-core-types/src/: account.rs  account_set.rs  balance.rs  cel_context.rs  entry.rs  id.rs  journal.rs  lib.rs  outbox.rs  param.rs  primitives.rs  query.rs  transaction.rs  tx_template.rs
cala-ledger-outbox/: Cargo.toml
cala-ledger-outbox-client/: Cargo.toml  build.rs
cala-ledger-outbox-client/src/: client.rs  config.rs  convert.rs  error.rs  lib.rs
cala-ledger-outbox/.sqlx/: query-0274b5a854b9b61829c4833393795b84a3e2faa0627a14d3cf60228e096f30f1.json  query-04b502eecdad9a005c3c303cb82b58429e87d1d8f9084019d06ba74b961f801a.json  query-5b12631f4b559c9a066316157bc67c13b5b06cac654edc5ed6f6f67bd769fa87.json  query-5e0ffd25c44cfb3e0f3873bb53c1b92fc5563b86d2b70cb2ac7f11b2de53cad9.json  query-880622c69f899dc6b83dc4c24761f8bd1c696138e116201513b54599727b5c74.json  query-9423957163ad17f43549494475af8910bc7d5b8620a6d7fea44c2fae584a8774.json  query-a68768110ff7b74d09822f7ba11bf7d3c4544d08cbb040662537ca75869724b9.json  query-e88ee721b3558d3fcd74480939d239a27572de449bc7cab05579c33ad78dcf06.json  query-f6779de94528ba5104a1a10047aaf3a4aad5539eb0577e3164c2ba9f84bed9d0.json
cala-ledger-outbox/src/: lib.rs
cala-ledger-velocity/: Cargo.toml  build.rs
cala-ledger-velocity/src/: context.rs  error.rs  lib.rs
cala-ledger/.sqlx/: query-00b8176ea75cc381c496bdccb206ef96e26284c8cbe93edf271148f02a4db554.json  query-017afe113238baed5b484a71f43a41fe681219c098f7298f38f461f95c7ef764.json  query-019135648f4d3371f724322403863b87a60ad88a44541651afaf9f7ef6288435.json  query-02fefaba20bd33d8d5089c5cb8636913018637066ce2b96d200fc208652bdcf8.json  query-0305cde82fcecf549452c45fb0adf94de3187d8506ec9b3da912e2a8ee7daab6.json  query-030ce137853044242ffa49d9c61c7a650116df7dc5c650736a8f7e0d096db6e9.json  query-03713400a796f6e67d959b9cd11846cbd5fc7ec2800c3e76e788ae6e0bfff59e.json  query-03994377e116e70dfd472474dcea39c895bf0d6815c035c397abf1fc5b44c069.json  query-03e5ccf53a19fef6988809932fb55a4c675a1b653d62675ad0d94fe82e599193.json  query-03f1090931f9509def351baebce13d42474eb2f7ab02f61448c70c19c693c193.json  query-04902cc869c79bb803aac983f9dabb056ae4e15a0c4cc097ce703a71d2783fb5.json  query-04996a53c2cd8b68c2575253ab4f57c78ad6438b96c386ea8b3ef5a7f37c306f.json  query-04b7a8b3aeeeed28c884ab136993fe363319ad7f0e4984df668b4a4fb524ac41.json  query-04ca969137e905e751f157dc0dcee46b8f0e59f973d3755fd15e5dba7f6e84ef.json  query-05da50a3a0574fed8da0bf7c8049cb094691d7ed3d895e47c028ec41e46f841c.json  query-05e1c6bd7a56ac14abcd4181a64e1e227c7f2af88bd2388820aa30f6372d80c5.json  query-0628745e72ebd803a5d045bae7a6566bafd55219cdf858a6e8cde3b208203383.json  query-0672c2be00d064daf057c67dec510aa89161195fea2d58827889553748ef9dfe.json  query-06782c2a9a3872817f3c7e755f88153c3d624d569c4b36e02c6c56aa0f4cadce.json  query-083adb45505a2801160e813f8f8bcd564c0cd93533a429c989eedf54ea2c8f97.json  query-089ea282c32176080fdf70f1d1b62d649ddf49e4333effc13729bbeb395190b7.json  query-09db3e29d37e4918a2d36c54e3829389b281c3784f989a5d2c7b64436415a973.json  query-0a2197e6b93cedcaf01e1517daa2d960ef1a55ebd9e6ba56b1928a132970054f.json  query-0adaf45623673e3453f08755801f533c15c19b5350e5d6fa1a92dd1486391830.json  query-0b436bb80d598d089f7ddf97561c325581e3a7b98d24f9078169edb36454c8f1.json  query-0cb350169e249358a46dea50bbeda0cbaedaa191dd9944ff2f8c271643ef21e5.json  query-0d327ebdfedc973b4a2fd598a9f8d81dd413bcf8c499b9f9ead5455096975e66.json  query-0d70d08b761ab42458e445142de699c123b2e59a13882f84d1d0f20a789de4a7.json  query-0dad7db8269bd70ab8aa34d7b586873f4cbdf8a38b028e3a5a42008085978829.json  (+463 more)
cala-ledger/fuzz/: Cargo.toml
cala-nodejs/: Cargo.toml  index.d.ts  index.js  package.json  test.mjs
cala-perf/: Cargo.toml
cala-server/: Cargo.toml  schema.graphql
cala-tracing/: Cargo.toml
(+1284 files in other folders)
