[workspace]
resolver = "2"
members = [
  "examples/rust",

  "cala-ledger",
  "cala-ledger-outbox-client",
  "cala-ledger-core-types",
  "cala-server",
  "cala-tracing",
  "cala-cel-parser",
  "cala-cel-interpreter",
  "cala-perf",
]

[workspace.dependencies]
cel-parser = { path = "cala-cel-parser", package = "cala-cel-parser", version = "0.13.10-dev" }
cel-interpreter = { path = "cala-cel-interpreter", package = "cala-cel-interpreter", version = "0.13.10-dev" }
cala-types = { path = "cala-ledger-core-types", package = "cala-ledger-core-types", version = "0.13.10-dev" }
cala-tracing = { path = "cala-tracing", version = "0.13.10-dev" }
cala-ledger = { path = "cala-ledger", version = "0.13.10-dev" }
cala-ledger-outbox-client = { path = "cala-ledger-outbox-client", version = "0.13.10-dev" }
cala-server = { path = "cala-server", version = "0.13.10-dev" }

es-entity = "0.10"
job = { version = "0.6", features = ["es-entity"] }
obix = { version = "0.2", default-features = false }

anyhow = "1.0.99"
async-graphql = { version = "7.0.17", default-features = false, features = ["dataloader", "tracing", "chrono", "playground"] }
async-graphql-axum = "7.0.17"
async-trait = "0.1"
axum = { version = "0.8.6", features = ["macros"] }
axum-extra = { version = "0.10.3", default-features = false, features = ["tracing", "typed-header"] }
base64 = { version = "0.22.1" }
cached = { version = "0.56", features = ["async"] }
chrono = { version = "0.4.42", features = ["clock", "serde"], default-features = false }
clap = { version = "4.5", features = ["derive", "env", "cargo"] }
derive_builder = "0.20.1"
sqlx = { version = "0.8.3", features = [ "runtime-tokio-rustls", "postgres", "rust_decimal", "uuid", "chrono", "json" ] }
thiserror = "2.0.17"
uuid = { version = "1.18", features = ["serde", "v7"] }
regex = "1.11.2"
tracing = "0.1.41"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
opentelemetry = { version = "0.31.0" }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = [
  "http-proto",
  "grpc-tonic",
  "reqwest-client",
] }
opentelemetry-http = "0.31.0"
opentelemetry-semantic-conventions = { version = "0.31.0", features = ["semconv_experimental"] }
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
serde_with = "3.14"
strum = { version = "0.27", features = ["derive"] }
tonic = "0.14.2"
tonic-build = { version = "0.13.1", features = ["prost"] }
tonic-health = "0.13.1"
prost = "0.13"
prost-wkt-types = { version = "0.6", features = ["vendored-protoc"]}
protobuf-src = { version = "1.1.0" }
futures = "0.3.29"
http = "1.4.0"
lazy_static = "1.5"
lalrpop-util = { version = "0.22", features = ["lexer"] }
lalrpop = { version = "0.22", features = ["lexer"] }
rust_decimal_macros = "1.39"
rust_decimal = "1.39"
rusty-money = { version = "0.5", features = ["iso", "crypto"] }
schemars = { version = "1.0", features = ["uuid1"] }
rand = "0.9"

[profile.release]
lto = true

[profile.bench]
debug = true
