[workspace]
resolver = "2"
members = [
  "examples/rust",

  "cala-ledger",
  "cala-ledger-core-types",
  "cala-tracing",
  "cala-cel-parser",
  "cala-cel-interpreter",
  "cala-perf",
]

[workspace.dependencies]
cel-parser = { path = "cala-cel-parser", package = "cala-cel-parser", version = "0.14.6-dev" }
cel-interpreter = { path = "cala-cel-interpreter", package = "cala-cel-interpreter", version = "0.14.6-dev" }
cala-types = { path = "cala-ledger-core-types", package = "cala-ledger-core-types", version = "0.14.6-dev" }
cala-tracing = { path = "cala-tracing", version = "0.14.6-dev" }
cala-ledger = { path = "cala-ledger", version = "0.14.6-dev" }

es-entity = "0.10.33"
job = { version = "0.6.14", features = ["es-entity"] }
obix = { version = "0.2.20", default-features = false }

anyhow = "1.0.99"
async-graphql = { version = "8.0.0-rc.4", default-features = false, features = ["dataloader", "tracing", "chrono", "tokio"] }
base64 = { version = "0.22.1" }
cached = { version = "0.59", features = ["async"] }
chrono = { version = "0.4.44", features = ["clock", "serde"], default-features = false }
derive_builder = "0.20.1"
sqlx = { version = "0.8.3", features = [ "runtime-tokio-rustls", "postgres", "rust_decimal", "uuid", "chrono", "json" ] }
thiserror = "2.0.18"
uuid = { version = "1.20", features = ["serde", "v7"] }
regex = "1.11.2"
tracing = "0.1.41"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
opentelemetry = { version = "0.31.0" }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.31.1", default-features = false, features = [
  "http-proto",
  "grpc-tonic",
  "reqwest-client",
] }
opentelemetry-semantic-conventions = { version = "0.31.0", features = ["semconv_experimental"] }
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.28", features = ["derive"] }
futures = "0.3.29"
lalrpop-util = { version = "0.23", features = ["lexer"] }
lalrpop = { version = "0.23", features = ["lexer"] }
rust_decimal_macros = "1.39"
rust_decimal = "1.39"
rusty-money = { version = "0.5", features = ["iso", "crypto"] }
schemars = { version = "1.0", features = ["uuid1"] }
rand = "0.10"

[patch.crates-io]
es-entity = { git = "https://github.com/GaloyMoney/es-entity", branch = "feat/count-for-filters-v2" }
es-entity-macros = { git = "https://github.com/GaloyMoney/es-entity", branch = "feat/count-for-filters-v2" }

[profile.release]
lto = true

[profile.bench]
debug = true
