[package]
name = "cala-cel-interpreter"
description = "An interpreter for the Common Expression Language (CEL)"
repository = "https://github.com/GaloyMoney/cala"
version = "0.1.11"
edition = "2021"
license = "Apache-2.0"
categories = ["parsing", "cel"]

[features]

fail-on-warnings = []

[dependencies]
cel-parser = { path = "../cala-cel-parser/", package = "cala-cel-parser", version = "0.1.11" }

chrono = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
