[package]
name = "cala-cel-interpreter"
description = "An interpreter for the Common Expression Language (CEL)"
repository = "https://github.com/GaloyMoney/cala"
version = "0.13.10"
edition = "2021"
license = "Apache-2.0"
categories = ["parsing", "compilers"]

[features]

fail-on-warnings = []
json-schema = ["dep:schemars"]

[dependencies]
cel-parser = { workspace = true }
es-entity = { workspace = true }

chrono = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
lazy_static = { workspace = true }
schemars = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
