[package]
name = "cala-ledger-account-set"
description = "Account set module for the cala-ledger"
repository = "https://github.com/GaloyMoney/cala"
version = "0.13.17-dev"
edition = "2021"
license = "Apache-2.0"

[features]
fail-on-warnings = []
graphql = ["dep:async-graphql", "dep:base64", "cala-types/graphql", "es-entity/graphql"]
json-schema = ["cala-types/json-schema", "es-entity/json-schema", "dep:schemars"]

[dependencies]
cala-types = { workspace = true }
cala-ledger-outbox = { workspace = true }
es-entity = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
derive_builder = { workspace = true }

async-graphql = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
schemars = { workspace = true, optional = true }

[dev-dependencies]

[build-dependencies]
