[package]
name = "cala-ledger-outbox-client"
description = "Outbox client for cala-ledger"
repository = "https://github.com/GaloyMoney/cala"
version = "0.2.22-dev"
edition = "2021"
license = "Apache-2.0"
categories = ["client", "outbox"]

[features]

fail-on-warnings = []

[dependencies]
cala_types = { path = "../cala-ledger-core-types", package = "cala-ledger-core-types", version = "0.2.22-dev" }
cel-interpreter = { path = "../cala-cel-interpreter", package = "cala-cel-interpreter", version = "0.2.22-dev" }

futures = { workspace = true }
uuid = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
prost-wkt-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }

[build-dependencies]
protobuf-src = { version = "1.1.0" }
tonic-build = { version = "0.11.0", features = ["prost"] }
