[package]
name = "cala-ledger-outbox-client"
description = "Outbox client for cala-ledger"
repository = "https://github.com/GaloyMoney/cala"
version = "0.12.4-dev"
edition = "2021"
license = "Apache-2.0"

[features]

fail-on-warnings = []

[dependencies]
cala-types = { workspace = true }
cel-interpreter = { workspace = true }

futures = { workspace = true }
uuid = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }
prost-wkt-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }

[build-dependencies]
protobuf-src = { workspace = true }
tonic-build = { workspace = true }
