[package]
name = "cala-ledger"
description = "An embeddable double sided accounting ledger built on PG/SQLx"
repository = "https://github.com/GaloyMoney/cala"
documentation = "https://docs.rs/cala-ledger"
readme = "../README.md"
version = "0.2.10-dev"
edition = "2021"
license = "Apache-2.0"
categories = ["accounting", "ledger"]

[features]

fail-on-warnings = []
import = []

[dependencies]
cala-types = { path = "../cala-ledger-core-types", package = "cala-ledger-core-types", version = "0.2.10-dev" }
cel-interpreter = { path = "../cala-cel-interpreter", package = "cala-cel-interpreter", version = "0.2.10-dev" }
cala-tracing = { path = "../cala-tracing", features = ["grpc"], package = "cala-tracing", version = "0.2.10-dev" }

cached = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
prost = { workspace = true }
prost-wkt-types = { workspace = true }
opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true }
futures = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
anyhow = "1.0"
rand = "0.8"
tokio-test = "0.4"

[build-dependencies]
protobuf-src = { version = "1.1.0" }
tonic-build = { version = "0.11.0", features = ["prost"] }
