[package]
name = "cala-ledger"
description = "An embeddable double sided accounting ledger built on PG/SQLx"
repository = "https://github.com/GaloyMoney/cala"
documentation = "https://docs.rs/cala-ledger"
readme = "../README.md"
version = "0.5.3"
edition = "2021"
license = "Apache-2.0"
categories = ["finance"]

[features]

fail-on-warnings = []
import = []
graphql = ["es-entity/graphql", "dep:async-graphql", "dep:base64", "cala-types/graphql"]

[dependencies]
cala-types = { path = "../cala-ledger-core-types", package = "cala-ledger-core-types", version = "0.5.3" }
cel-interpreter = { path = "../cala-cel-interpreter", package = "cala-cel-interpreter", version = "0.5.3" }
cala-tracing = { path = "../cala-tracing", features = ["grpc"], package = "cala-tracing", version = "0.5.3" }
es-entity = { path = "../lib/es-entity", package = "es-entity", version = "0.5.3" }

async-graphql = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }

cached = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
prost = { workspace = true }
prost-wkt-types = { workspace = true }
opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true }
futures = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
anyhow = "1.0"
rand = "0.9"
tokio-test = "0.4"
rust_decimal_macros = { workspace = true }

[build-dependencies]
protobuf-src = { workspace = true }
tonic-build = { workspace = true }
