[package]
name = "cala-ledger"
description = "An embeddable double sided accounting ledger built on PG/SQLx"
repository = "https://github.com/GaloyMoney/cala"
documentation = "https://docs.rs/cala-ledger"
readme = "../README.md"
version = "0.11.4"
edition = "2021"
license = "Apache-2.0"
categories = ["finance"]

[features]

fail-on-warnings = []
import = []
graphql = ["es-entity/graphql", "dep:async-graphql", "dep:base64", "cala-types/graphql"]
json-schema = ["cala-types/json-schema", "job/json-schema", "es-entity/json-schema"]

[dependencies]
cala-types = { workspace = true }
cel-interpreter = { workspace = true }
cala-tracing = { workspace = true, features = ["grpc"] }
es-entity = { workspace = true }
job = { workspace = true }

async-graphql = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }

cached = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
prost = { workspace = true }
prost-wkt-types = { workspace = true }
opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true }
futures = { workspace = true }
rust_decimal = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
rand = { workspace = true }
tokio-test = "0.4"
rust_decimal_macros = { workspace = true }

[build-dependencies]
protobuf-src = { workspace = true }
tonic-build = { workspace = true }
