[package]
edition = "2021"
name = "galoymoney_cala-ledger"
version = "0.10.1-dev"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
cala-types = { workspace = true }
cala-ledger = { workspace = true }

base64 = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
napi = { version = "3.3.0", default-features = false, features = ["tokio_rt", "serde-json"] }
napi-derive = "2.16.13"

[build-dependencies]
napi-build = "2.2.2"
