[package]
edition = "2021"
name = "galoymoney_cala-ledger"
version = "0.12.10"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
cala-types = { workspace = true }
cala-ledger = { workspace = true }
cel-interpreter = { workspace = true }

base64 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["serde", "v7"] }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
napi = { version = "3.4.0", default-features = false, features = ["tokio_rt", "serde-json"] }
napi-derive = "3.2.5"

[build-dependencies]
napi-build = "2.2.4"
