[package]
name = "cala-perf"
version = "0.8.2-dev"
edition = "2024"

[dependencies]
cala-ledger = { workspace = true }
cala-types = { workspace = true }

anyhow = { workspace = true }
sqlx = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
criterion = { version = "0.7", features = ["html_reports", "async_tokio"] }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }

[[bench]]
name = "ledger_benchmarks"
harness = false
