[package]
name = "cala-perf"
version = "0.13.15"
edition = "2021"
license = "Apache-2.0"

[dependencies]
cala-ledger = { workspace = true }
cala-types = { workspace = true }

anyhow = { workspace = true }
sqlx = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
rust_decimal = { workspace = true }
serde = { workspace = true }

[[bench]]
name = "ledger_benchmarks"
harness = false
