[package]
name = "cala-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cala-types = { path = "../cala-ledger-core-types", package = "cala-ledger-core-types" }
cala-tracing = { path = "../cala-tracing", features = ["http", "grpc"] }
cala-ledger = { path = "../cala-ledger" }

anyhow = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
derive_builder = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
