[package]
name = "cala-server"
description = "Server to sync other cala deployments"
repository = "https://github.com/GaloyMoney/cala"
version = "0.3.22-dev"
edition = "2021"
license = "Apache-2.0"

[features]

fail-on-warnings = []

[dependencies]
cala-types = { path = "../cala-ledger-core-types", package = "cala-ledger-core-types", version = "0.3.22-dev" }
cala-ledger = { path = "../cala-ledger", features = ["import", "graphql"], package = "cala-ledger", version = "0.3.22-dev" }
cel-interpreter = { path = "../cala-cel-interpreter", package = "cala-cel-interpreter", version = "0.3.22-dev" }
cala-ledger-outbox-client = { path = "../cala-ledger-outbox-client", package = "cala-ledger-outbox-client", version = "0.3.22-dev" }
cala-tracing = { path = "../cala-tracing", features = ["http", "grpc"], package = "cala-tracing", version = "0.3.22-dev" }
es-entity = { path = "../lib/es-entity", package = "es-entity", version = "0.3.22-dev" }

anyhow = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
