[package]
name = "cala-server"
description = "Server to sync other cala deployments"
repository = "https://github.com/GaloyMoney/cala"
version = "0.13.15-dev"
edition = "2021"
license = "Apache-2.0"

[features]

fail-on-warnings = []

[dependencies]
cel-interpreter = { workspace = true }
cala-types = { workspace = true }
cala-tracing = { workspace = true, features = ["http"] }
cala-ledger = { workspace = true, features = ["graphql"] }
es-entity = { workspace = true, features = ["graphql"] }
job = { workspace = true }
obix = { workspace = true }

anyhow = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
rust_decimal = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
