[package]
name = "cala-tracing"
description = "Tracing library powering cala stack"
repository = "https://github.com/GaloyMoney/cala"
version = "0.3.24"
edition = "2021"
license = "Apache-2.0"

[features]

fail-on-warnings = []
http = ["dep:opentelemetry-http", "dep:http"]
grpc = ["dep:tonic"]

[dependencies]
anyhow = { workspace = true }
axum-extra = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry_sdk = { workspace = true }

tonic = { workspace = true, optional = true }
opentelemetry-http = { workspace = true, optional = true }
http = { workspace = true, optional = true }
