[package]
name = "cala-tracing"
description = "Tracing library powering cala stack"
repository = "https://github.com/GaloyMoney/cala"
version = "0.13.15-dev"
edition = "2021"
license = "Apache-2.0"

[features]

fail-on-warnings = []
http = ["dep:opentelemetry-http", "dep:http"]

[dependencies]
anyhow = { workspace = true }
axum-extra = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry_sdk = { workspace = true }

opentelemetry-http = { workspace = true, optional = true }
http = { workspace = true, optional = true }
