[package]
name = "cala-ledger-example-rust"
version = "0.1.0"
edition = "2021"
workspace = "../../"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
cala-ledger = { path = "../../cala-ledger" }
tokio = { version = "1.34", features = ["rt-multi-thread", "macros"] }
sqlx = { workspace = true }
