[package]
name = "es-entity-macros"
description = "Proc macros for es-entity"
repository = "https://github.com/GaloyMoney/cala"
version = "0.3.14-dev"
edition = "2021"
license = "Apache-2.0"
categories = ["data-structures", "database"]

[features]

fail-on-warnings = []
graphql = []

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.92"
syn = "2.0.90"
quote = "1.0.36"
darling = "0.20.9"
pluralizer = "0.4.0"
convert_case = "0.6.0"
regex = "1.11"
