[package]
name = "es-entity"
version = "0.2.47-dev"
edition = "2021"

[features]

fail-on-warnings = []
graphql = ["es-entity-macros/graphql", "dep:async-graphql", "dep:base64"]
sim-time = [ "dep:sim-time" ]

[dependencies]
es-entity-macros = { path = "../es-entity-macros" }
sim-time = { path = "../sim-time", optional = true }

async-trait = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
chrono =  { workspace = true }
serde =  { workspace = true }
serde_json =  { workspace = true }
derive_builder = { workspace = true }
uuid = { workspace = true }
async-graphql = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
