[package]
name = "es-entity"
description = "Event Sourcing Entity Framework"
repository = "https://github.com/GaloyMoney/cala"
version = "0.3.22-dev"
edition = "2021"
license = "Apache-2.0"
categories = ["data-structures", "database"]

[features]

fail-on-warnings = []
graphql = ["es-entity-macros/graphql", "dep:async-graphql", "dep:base64"]
sim-time = [ "dep:sim-time" ]

[dependencies]
es-entity-macros = { path = "../es-entity-macros", package = "es-entity-macros", version = "0.3.22-dev" }
sim-time = { path = "../sim-time", optional = true, package = "sim-time", version = "0.3.22-dev" }

async-trait = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
chrono =  { workspace = true }
serde =  { workspace = true }
serde_json =  { workspace = true }
derive_builder = { workspace = true }
uuid = { workspace = true }
async-graphql = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
