[package]
name = "sim-time"
description = "Helper crate to simulate time in es-entity"
repository = "https://github.com/GaloyMoney/cala"
documentation = "https://docs.rs/cala-ledger"
version = "0.3.23"
edition = "2021"
license = "Apache-2.0"
categories = ["simulation"]

[features]

fail-on-warnings = []

[dependencies]
serde = { workspace = true }
serde_with = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
